service-mesh/dev/02-mtls-strict-demo.yaml
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: default
  namespace: dev
spec:
  mtls:
    mode: STRICT
---
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: storefront-bff-ingress-permissive
  namespace: dev
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: storefront-bff
  mtls:
    mode: PERMISSIVE
---
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: backoffice-bff-ingress-permissive
  namespace: dev
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: backoffice-bff
  mtls:
    mode: PERMISSIVE
---
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: swagger-ui-ingress-permissive
  namespace: dev
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: swagger-ui
  mtls:
    mode: PERMISSIVE
---
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: media-ingress-permissive
  namespace: dev
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: media
  mtls:
    mode: PERMISSIVE
