service-mesh/dev/02-test-client.yaml
apiVersion: v1
kind: Pod
metadata:
  name: test-client
  namespace: dev
  labels:
    app: test-client
spec:
  containers:
  - name: main
    image: curlimages/curl
    command: ["sleep", "3600"]
