service-mesh/dev/03-destination-rule.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: product-istio-mutual
  namespace: dev
spec:
  host: product.dev.svc.cluster.local
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
