service-mesh/dev/05-virtual-service.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: cart-retry
  namespace: dev
spec:
  hosts:
    - "cart"
  http:
    - route:
        - destination:
            host: cart.dev.svc.cluster.local
      retries:
        attempts: 3
        perTryTimeout: 2s
        retryOn: "5xx,connect-failure,refused-stream"
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: customer-retry
  namespace: dev
spec:
  hosts:
    - "customer"
  http:
    - route:
        - destination:
            host: customer.dev.svc.cluster.local
      retries:
        attempts: 3
        perTryTimeout: 2s
        retryOn: "5xx,connect-failure,refused-stream"
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: httpbin-retry
  namespace: dev
spec:
  hosts:
    - "httpbin"
  http:
    - route:
        - destination:
            host: httpbin.dev.svc.cluster.local
      retries:
        attempts: 3
        perTryTimeout: 2s
        retryOn: "5xx,connect-failure,refused-stream"
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: inventory-retry
  namespace: dev
spec:
  hosts:
    - "inventory"
  http:
    - route:
        - destination:
            host: inventory.dev.svc.cluster.local
      retries:
        attempts: 3
        perTryTimeout: 2s
        retryOn: "5xx,connect-failure,refused-stream"
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: location-retry
  namespace: dev
spec:
  hosts:
    - "location"
  http:
    - route:
        - destination:
            host: location.dev.svc.cluster.local
      retries:
        attempts: 3
        perTryTimeout: 2s
        retryOn: "5xx,connect-failure,refused-stream"
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: media-retry
  namespace: dev
spec:
  hosts:
    - "media"
  http:
    - route:
        - destination:
            host: media.dev.svc.cluster.local
      retries:
        attempts: 3
        perTryTimeout: 2s
        retryOn: "5xx,connect-failure,refused-stream"
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: order-retry
  namespace: dev
spec:
  hosts:
    - "order"
  http:
    - route:
        - destination:
            host: order.dev.svc.cluster.local
      retries:
        attempts: 3
        perTryTimeout: 2s
        retryOn: "5xx,connect-failure,refused-stream"
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: payment-retry
  namespace: dev
spec:
  hosts:
    - "payment"
  http:
    - route:
        - destination:
            host: payment.dev.svc.cluster.local
      retries:
        attempts: 3
        perTryTimeout: 2s
        retryOn: "5xx,connect-failure,refused-stream"
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: product-retry
  namespace: dev
spec:
  hosts:
    - "product"
  http:
    - route:
        - destination:
            host: product.dev.svc.cluster.local
      retries:
        attempts: 3
        perTryTimeout: 2s
        retryOn: "5xx,connect-failure,refused-stream"
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: rating-retry
  namespace: dev
spec:
  hosts:
    - "rating"
  http:
    - route:
        - destination:
            host: rating.dev.svc.cluster.local
      retries:
        attempts: 3
        perTryTimeout: 2s
        retryOn: "5xx,connect-failure,refused-stream"
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: search-retry
  namespace: dev
spec:
  hosts:
    - "search"
  http:
    - route:
        - destination:
            host: search.dev.svc.cluster.local
      retries:
        attempts: 3
        perTryTimeout: 2s
        retryOn: "5xx,connect-failure,refused-stream"
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: tax-retry
  namespace: dev
spec:
  hosts:
    - "tax"
  http:
    - route:
        - destination:
            host: tax.dev.svc.cluster.local
      retries:
        attempts: 3
        perTryTimeout: 2s
        retryOn: "5xx,connect-failure,refused-stream"
